# inference-subnet-template

./: .gitignore  README.md  pyproject.toml  settings.py
inference_subnet/: protocol.py  settings.py  verification.py
inference_subnet/neurons/miner/: app.py  chain_interact.py
inference_subnet/neurons/validator/: main.py
inference_subnet/services/managing/: README.md  app.py  rate_limit_manager.py  schemas.py  score_manager.py
inference_subnet/services/scoring/: schemas.py
inference_subnet/services/sidecar_subtensor/: README.md  app.py  schemas.py  sync_node_info.py
services/managing/: calculate_rate_limit.py  consume_count.py
services/sidecar_subtensor/: app.py  schemas.py  sync_node_info.py
