[project]
name = "inference-subnet-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "async-substrate-interface>=1.0.8",
    "bittensor-wallet>=3.0.4",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "netaddr>=1.3.0",
    "numpy>=2.2.4",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "schedule>=1.2.2",
    "substrate-interface>=1.7.11",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["inference_subnet"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"